--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,8 +7,6 @@ on:
     paths:
       - 'Dockerfile'
       - '.github/workflows/docker-build.yml'
-      - 'src/**'
-      - 'Cargo.toml'
 
   release:
     types: [published]
@@ -32,31 +30,34 @@ jobs:
       DOCKERHUB_IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
     steps:
       - name: 'Checkout repository'
-        uses: actions/checkout@v4
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3  # v6.0.0
+        # 对于 release 事件，获取与 tag 关联的 commit
         with:
           ref: ${{ github.event_name == 'release' && github.event.release.target_commitish || github.ref }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v3.6.0
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v3.6.0
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Cross-compilation is handled via Dockerfile toolchains, but buildx needs to handle the platforms.
-      # We don't need QEMU because we are cross-compiling, not emulating.
+      - name: Set up QEMU
+        if: false  # 交叉编译时不需要仿真
+        uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130  # v3.7.0
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435  # v3.11.1
 
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@318604b99e75e41977312d83839a89be02ca4893  # v5.9.0
         env:
           DOCKER_METADATA_ANNOTATIONS_LEVELS: index
         with:
@@ -65,23 +66,22 @@ jobs:
             ${{ env.GHCR_IMAGE }}
           flavor: |
             latest=false
-            suffix=-onnxruntime,onlatest=true
           tags: |
             type=sha,format=long,enable=${{ github.event_name == 'push' }}
             type=raw,value=latest,enable=${{ github.event_name == 'push' || github.event_name == 'release' }}
             type=semver,pattern={{version}},enable=${{ github.event_name == 'release' }}
             type=raw,value=${{ inputs.image_tag }},enable=${{ github.event_name == 'workflow_dispatch' }}
-          labels: |
-            org.opencontainers.image.title=ddddocr-musl
-            org.opencontainers.image.description=Rust implementation of ddddocr with ONNX Runtime backend
 
-      - name: Build and push image
-        uses: docker/build-push-action@v6
+      - name: Build and push image (on push or manual trigger)
+        # 仅在非 release 事件时运行
+        if: github.event_name != 'release'
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83  # v6.18.0
         with:
           context: .
+          # file: ./Dockerfile
           platforms: |
             linux/amd64
-            linux/arm64
+            linux/arm64/v8
           push: true
           provenance: true
           tags: ${{ steps.meta.outputs.tags }}
@@ -92,7 +92,7 @@ jobs:
 
       - name: Docker Hub Description
         if: github.event_name != 'release'
-        uses: peter-evans/dockerhub-description@v4
+        uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa  # V5.0.0
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -105,26 +105,18 @@ jobs:
           GHCR_LOWER="${GHCR_IMAGE,,}"
           DOCKERHUB_LOWER="${DOCKERHUB_IMAGE,,}"
           
-          # Source is latest because of our metadata flavor
-          SOURCE_IMAGE="$GHCR_LOWER:latest-onnxruntime"
+          # 直接使用 GHCR 的 latest
+          SOURCE_IMAGE="$GHCR_LOWER:latest"
           
-          # Fallback if flavor suffix logic behaves differently than expected (it appends)
-          # Actually, flavor suffix adds to ALL tags.
-          # Let's verify logic. If suffix=-onnxruntime, then 'latest' becomes 'latest-onnxruntime'.
-          # The user said "add onnxruntime custom label" (probably meant tag suffix or label).
-          # Let's stick to standard tags for now and maybe just add a specific onnxruntime tag manually if needed.
-          # But the flavor logic above produces: sha-...-onnxruntime, latest-onnxruntime.
-          
-          # Wait, user just said "add an onnxruntime custom label".
-          # Maybe they meant a LABEL in Dockerfile? I added that.
-          # Or maybe a tag like `v1.0.0-onnxruntime`.
-          # I will stick to the requested platforms and cache.
-          # Removing the complex flavor suffix for now to avoid confusion and stick to standard tags.
-          # If the user wants a distinct tag for tract later, they can use inputs or separate workflow.
-          
-          echo "Promoting release..."
+          echo "Source Image found: $SOURCE_IMAGE"
+          echo "Target Tags: ${{ github.event.release.tag_name }}"
+
+          # 执行跨仓库/跨标签同步
           docker buildx imagetools create \
-            "$GHCR_LOWER:latest" \
+            "$SOURCE_IMAGE" \
             --tag "$GHCR_LOWER:${{ github.event.release.tag_name }}" \
             --tag "$DOCKERHUB_LOWER:${{ github.event.release.tag_name }}" \
             --tag "$DOCKERHUB_LOWER:latest"
+
+          echo "Successfully promoted $SOURCE_IMAGE to release ${{ github.event.release.tag_name }}"
+
